// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`semanticInfo fixtures/export-file.src 1`] = `
Object {
  "body": Array [
    Object {
      "declaration": Object {
        "elements": Array [
          Object {
            "loc": Object {
              "end": Object {
                "column": 17,
                "line": 1,
              },
              "start": Object {
                "column": 16,
                "line": 1,
              },
            },
            "range": Array [
              16,
              17,
            ],
            "raw": "3",
            "type": "Literal",
            "value": 3,
          },
          Object {
            "loc": Object {
              "end": Object {
                "column": 20,
                "line": 1,
              },
              "start": Object {
                "column": 19,
                "line": 1,
              },
            },
            "range": Array [
              19,
              20,
            ],
            "raw": "4",
            "type": "Literal",
            "value": 4,
          },
          Object {
            "loc": Object {
              "end": Object {
                "column": 23,
                "line": 1,
              },
              "start": Object {
                "column": 22,
                "line": 1,
              },
            },
            "range": Array [
              22,
              23,
            ],
            "raw": "5",
            "type": "Literal",
            "value": 5,
          },
        ],
        "loc": Object {
          "end": Object {
            "column": 24,
            "line": 1,
          },
          "start": Object {
            "column": 15,
            "line": 1,
          },
        },
        "range": Array [
          15,
          24,
        ],
        "type": "ArrayExpression",
      },
      "exportKind": "value",
      "loc": Object {
        "end": Object {
          "column": 25,
          "line": 1,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "range": Array [
        0,
        25,
      ],
      "type": "ExportDefaultDeclaration",
    },
  ],
  "comments": Array [],
  "loc": Object {
    "end": Object {
      "column": 25,
      "line": 1,
    },
    "start": Object {
      "column": 0,
      "line": 1,
    },
  },
  "range": Array [
    0,
    25,
  ],
  "sourceType": "module",
  "tokens": Array [
    Object {
      "loc": Object {
        "end": Object {
          "column": 6,
          "line": 1,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "range": Array [
        0,
        6,
      ],
      "type": "Keyword",
      "value": "export",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 14,
          "line": 1,
        },
        "start": Object {
          "column": 7,
          "line": 1,
        },
      },
      "range": Array [
        7,
        14,
      ],
      "type": "Keyword",
      "value": "default",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 16,
          "line": 1,
        },
        "start": Object {
          "column": 15,
          "line": 1,
        },
      },
      "range": Array [
        15,
        16,
      ],
      "type": "Punctuator",
      "value": "[",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 17,
          "line": 1,
        },
        "start": Object {
          "column": 16,
          "line": 1,
        },
      },
      "range": Array [
        16,
        17,
      ],
      "type": "Numeric",
      "value": "3",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 18,
          "line": 1,
        },
        "start": Object {
          "column": 17,
          "line": 1,
        },
      },
      "range": Array [
        17,
        18,
      ],
      "type": "Punctuator",
      "value": ",",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 20,
          "line": 1,
        },
        "start": Object {
          "column": 19,
          "line": 1,
        },
      },
      "range": Array [
        19,
        20,
      ],
      "type": "Numeric",
      "value": "4",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 21,
          "line": 1,
        },
        "start": Object {
          "column": 20,
          "line": 1,
        },
      },
      "range": Array [
        20,
        21,
      ],
      "type": "Punctuator",
      "value": ",",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 23,
          "line": 1,
        },
        "start": Object {
          "column": 22,
          "line": 1,
        },
      },
      "range": Array [
        22,
        23,
      ],
      "type": "Numeric",
      "value": "5",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 24,
          "line": 1,
        },
        "start": Object {
          "column": 23,
          "line": 1,
        },
      },
      "range": Array [
        23,
        24,
      ],
      "type": "Punctuator",
      "value": "]",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 25,
          "line": 1,
        },
        "start": Object {
          "column": 24,
          "line": 1,
        },
      },
      "range": Array [
        24,
        25,
      ],
      "type": "Punctuator",
      "value": ";",
    },
  ],
  "type": "Program",
}
`;

exports[`semanticInfo fixtures/import-file.src 1`] = `
Object {
  "body": Array [
    Object {
      "importKind": "value",
      "loc": Object {
        "end": Object {
          "column": 36,
          "line": 1,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "range": Array [
        0,
        36,
      ],
      "source": Object {
        "loc": Object {
          "end": Object {
            "column": 35,
            "line": 1,
          },
          "start": Object {
            "column": 16,
            "line": 1,
          },
        },
        "range": Array [
          16,
          35,
        ],
        "raw": "\\"./export-file.src\\"",
        "type": "Literal",
        "value": "./export-file.src",
      },
      "specifiers": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 10,
              "line": 1,
            },
            "start": Object {
              "column": 7,
              "line": 1,
            },
          },
          "local": Object {
            "loc": Object {
              "end": Object {
                "column": 10,
                "line": 1,
              },
              "start": Object {
                "column": 7,
                "line": 1,
              },
            },
            "name": "arr",
            "range": Array [
              7,
              10,
            ],
            "type": "Identifier",
          },
          "range": Array [
            7,
            10,
          ],
          "type": "ImportDefaultSpecifier",
        },
      ],
      "type": "ImportDeclaration",
    },
    Object {
      "expression": Object {
        "arguments": Array [
          Object {
            "loc": Object {
              "end": Object {
                "column": 10,
                "line": 2,
              },
              "start": Object {
                "column": 9,
                "line": 2,
              },
            },
            "range": Array [
              46,
              47,
            ],
            "raw": "6",
            "type": "Literal",
            "value": 6,
          },
          Object {
            "loc": Object {
              "end": Object {
                "column": 13,
                "line": 2,
              },
              "start": Object {
                "column": 12,
                "line": 2,
              },
            },
            "range": Array [
              49,
              50,
            ],
            "raw": "7",
            "type": "Literal",
            "value": 7,
          },
        ],
        "callee": Object {
          "computed": false,
          "loc": Object {
            "end": Object {
              "column": 8,
              "line": 2,
            },
            "start": Object {
              "column": 0,
              "line": 2,
            },
          },
          "object": Object {
            "loc": Object {
              "end": Object {
                "column": 3,
                "line": 2,
              },
              "start": Object {
                "column": 0,
                "line": 2,
              },
            },
            "name": "arr",
            "range": Array [
              37,
              40,
            ],
            "type": "Identifier",
          },
          "optional": false,
          "property": Object {
            "loc": Object {
              "end": Object {
                "column": 8,
                "line": 2,
              },
              "start": Object {
                "column": 4,
                "line": 2,
              },
            },
            "name": "push",
            "range": Array [
              41,
              45,
            ],
            "type": "Identifier",
          },
          "range": Array [
            37,
            45,
          ],
          "type": "MemberExpression",
        },
        "loc": Object {
          "end": Object {
            "column": 14,
            "line": 2,
          },
          "start": Object {
            "column": 0,
            "line": 2,
          },
        },
        "optional": false,
        "range": Array [
          37,
          51,
        ],
        "type": "CallExpression",
      },
      "loc": Object {
        "end": Object {
          "column": 15,
          "line": 2,
        },
        "start": Object {
          "column": 0,
          "line": 2,
        },
      },
      "range": Array [
        37,
        52,
      ],
      "type": "ExpressionStatement",
    },
  ],
  "comments": Array [],
  "loc": Object {
    "end": Object {
      "column": 15,
      "line": 2,
    },
    "start": Object {
      "column": 0,
      "line": 1,
    },
  },
  "range": Array [
    0,
    52,
  ],
  "sourceType": "module",
  "tokens": Array [
    Object {
      "loc": Object {
        "end": Object {
          "column": 6,
          "line": 1,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "range": Array [
        0,
        6,
      ],
      "type": "Keyword",
      "value": "import",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 10,
          "line": 1,
        },
        "start": Object {
          "column": 7,
          "line": 1,
        },
      },
      "range": Array [
        7,
        10,
      ],
      "type": "Identifier",
      "value": "arr",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 15,
          "line": 1,
        },
        "start": Object {
          "column": 11,
          "line": 1,
        },
      },
      "range": Array [
        11,
        15,
      ],
      "type": "Identifier",
      "value": "from",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 35,
          "line": 1,
        },
        "start": Object {
          "column": 16,
          "line": 1,
        },
      },
      "range": Array [
        16,
        35,
      ],
      "type": "String",
      "value": "\\"./export-file.src\\"",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 36,
          "line": 1,
        },
        "start": Object {
          "column": 35,
          "line": 1,
        },
      },
      "range": Array [
        35,
        36,
      ],
      "type": "Punctuator",
      "value": ";",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 2,
        },
        "start": Object {
          "column": 0,
          "line": 2,
        },
      },
      "range": Array [
        37,
        40,
      ],
      "type": "Identifier",
      "value": "arr",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 4,
          "line": 2,
        },
        "start": Object {
          "column": 3,
          "line": 2,
        },
      },
      "range": Array [
        40,
        41,
      ],
      "type": "Punctuator",
      "value": ".",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 8,
          "line": 2,
        },
        "start": Object {
          "column": 4,
          "line": 2,
        },
      },
      "range": Array [
        41,
        45,
      ],
      "type": "Identifier",
      "value": "push",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 9,
          "line": 2,
        },
        "start": Object {
          "column": 8,
          "line": 2,
        },
      },
      "range": Array [
        45,
        46,
      ],
      "type": "Punctuator",
      "value": "(",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 10,
          "line": 2,
        },
        "start": Object {
          "column": 9,
          "line": 2,
        },
      },
      "range": Array [
        46,
        47,
      ],
      "type": "Numeric",
      "value": "6",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 11,
          "line": 2,
        },
        "start": Object {
          "column": 10,
          "line": 2,
        },
      },
      "range": Array [
        47,
        48,
      ],
      "type": "Punctuator",
      "value": ",",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 13,
          "line": 2,
        },
        "start": Object {
          "column": 12,
          "line": 2,
        },
      },
      "range": Array [
        49,
        50,
      ],
      "type": "Numeric",
      "value": "7",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 14,
          "line": 2,
        },
        "start": Object {
          "column": 13,
          "line": 2,
        },
      },
      "range": Array [
        50,
        51,
      ],
      "type": "Punctuator",
      "value": ")",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 15,
          "line": 2,
        },
        "start": Object {
          "column": 14,
          "line": 2,
        },
      },
      "range": Array [
        51,
        52,
      ],
      "type": "Punctuator",
      "value": ";",
    },
  ],
  "type": "Program",
}
`;

exports[`semanticInfo fixtures/isolated-file.src 1`] = `
Object {
  "body": Array [
    Object {
      "declarations": Array [
        Object {
          "id": Object {
            "loc": Object {
              "end": Object {
                "column": 7,
                "line": 1,
              },
              "start": Object {
                "column": 6,
                "line": 1,
              },
            },
            "name": "x",
            "range": Array [
              6,
              7,
            ],
            "type": "Identifier",
          },
          "init": Object {
            "elements": Array [
              Object {
                "loc": Object {
                  "end": Object {
                    "column": 12,
                    "line": 1,
                  },
                  "start": Object {
                    "column": 11,
                    "line": 1,
                  },
                },
                "range": Array [
                  11,
                  12,
                ],
                "raw": "3",
                "type": "Literal",
                "value": 3,
              },
              Object {
                "loc": Object {
                  "end": Object {
                    "column": 15,
                    "line": 1,
                  },
                  "start": Object {
                    "column": 14,
                    "line": 1,
                  },
                },
                "range": Array [
                  14,
                  15,
                ],
                "raw": "4",
                "type": "Literal",
                "value": 4,
              },
              Object {
                "loc": Object {
                  "end": Object {
                    "column": 18,
                    "line": 1,
                  },
                  "start": Object {
                    "column": 17,
                    "line": 1,
                  },
                },
                "range": Array [
                  17,
                  18,
                ],
                "raw": "5",
                "type": "Literal",
                "value": 5,
              },
            ],
            "loc": Object {
              "end": Object {
                "column": 19,
                "line": 1,
              },
              "start": Object {
                "column": 10,
                "line": 1,
              },
            },
            "range": Array [
              10,
              19,
            ],
            "type": "ArrayExpression",
          },
          "loc": Object {
            "end": Object {
              "column": 19,
              "line": 1,
            },
            "start": Object {
              "column": 6,
              "line": 1,
            },
          },
          "range": Array [
            6,
            19,
          ],
          "type": "VariableDeclarator",
        },
      ],
      "kind": "const",
      "loc": Object {
        "end": Object {
          "column": 20,
          "line": 1,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "range": Array [
        0,
        20,
      ],
      "type": "VariableDeclaration",
    },
  ],
  "comments": Array [],
  "loc": Object {
    "end": Object {
      "column": 20,
      "line": 1,
    },
    "start": Object {
      "column": 0,
      "line": 1,
    },
  },
  "range": Array [
    0,
    20,
  ],
  "sourceType": "script",
  "tokens": Array [
    Object {
      "loc": Object {
        "end": Object {
          "column": 5,
          "line": 1,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "range": Array [
        0,
        5,
      ],
      "type": "Keyword",
      "value": "const",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 7,
          "line": 1,
        },
        "start": Object {
          "column": 6,
          "line": 1,
        },
      },
      "range": Array [
        6,
        7,
      ],
      "type": "Identifier",
      "value": "x",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 9,
          "line": 1,
        },
        "start": Object {
          "column": 8,
          "line": 1,
        },
      },
      "range": Array [
        8,
        9,
      ],
      "type": "Punctuator",
      "value": "=",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 11,
          "line": 1,
        },
        "start": Object {
          "column": 10,
          "line": 1,
        },
      },
      "range": Array [
        10,
        11,
      ],
      "type": "Punctuator",
      "value": "[",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 12,
          "line": 1,
        },
        "start": Object {
          "column": 11,
          "line": 1,
        },
      },
      "range": Array [
        11,
        12,
      ],
      "type": "Numeric",
      "value": "3",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 13,
          "line": 1,
        },
        "start": Object {
          "column": 12,
          "line": 1,
        },
      },
      "range": Array [
        12,
        13,
      ],
      "type": "Punctuator",
      "value": ",",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 15,
          "line": 1,
        },
        "start": Object {
          "column": 14,
          "line": 1,
        },
      },
      "range": Array [
        14,
        15,
      ],
      "type": "Numeric",
      "value": "4",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 16,
          "line": 1,
        },
        "start": Object {
          "column": 15,
          "line": 1,
        },
      },
      "range": Array [
        15,
        16,
      ],
      "type": "Punctuator",
      "value": ",",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 18,
          "line": 1,
        },
        "start": Object {
          "column": 17,
          "line": 1,
        },
      },
      "range": Array [
        17,
        18,
      ],
      "type": "Numeric",
      "value": "5",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 19,
          "line": 1,
        },
        "start": Object {
          "column": 18,
          "line": 1,
        },
      },
      "range": Array [
        18,
        19,
      ],
      "type": "Punctuator",
      "value": "]",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 20,
          "line": 1,
        },
        "start": Object {
          "column": 19,
          "line": 1,
        },
      },
      "range": Array [
        19,
        20,
      ],
      "type": "Punctuator",
      "value": ";",
    },
  ],
  "type": "Program",
}
`;

exports[`semanticInfo fixtures/non-existent-estree-nodes.src 1`] = `
Object {
  "body": Array [
    Object {
      "declarations": Array [
        Object {
          "id": Object {
            "loc": Object {
              "end": Object {
                "column": 12,
                "line": 1,
              },
              "start": Object {
                "column": 6,
                "line": 1,
              },
            },
            "name": "binExp",
            "range": Array [
              6,
              12,
            ],
            "type": "Identifier",
          },
          "init": Object {
            "left": Object {
              "loc": Object {
                "end": Object {
                  "column": 17,
                  "line": 1,
                },
                "start": Object {
                  "column": 16,
                  "line": 1,
                },
              },
              "range": Array [
                16,
                17,
              ],
              "raw": "3",
              "type": "Literal",
              "value": 3,
            },
            "loc": Object {
              "end": Object {
                "column": 21,
                "line": 1,
              },
              "start": Object {
                "column": 16,
                "line": 1,
              },
            },
            "operator": "+",
            "range": Array [
              16,
              21,
            ],
            "right": Object {
              "loc": Object {
                "end": Object {
                  "column": 21,
                  "line": 1,
                },
                "start": Object {
                  "column": 20,
                  "line": 1,
                },
              },
              "range": Array [
                20,
                21,
              ],
              "raw": "5",
              "type": "Literal",
              "value": 5,
            },
            "type": "BinaryExpression",
          },
          "loc": Object {
            "end": Object {
              "column": 22,
              "line": 1,
            },
            "start": Object {
              "column": 6,
              "line": 1,
            },
          },
          "range": Array [
            6,
            22,
          ],
          "type": "VariableDeclarator",
        },
      ],
      "kind": "const",
      "loc": Object {
        "end": Object {
          "column": 23,
          "line": 1,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "range": Array [
        0,
        23,
      ],
      "type": "VariableDeclaration",
    },
    Object {
      "body": Object {
        "body": Array [
          Object {
            "computed": true,
            "declare": false,
            "key": Object {
              "loc": Object {
                "end": Object {
                  "column": 9,
                  "line": 4,
                },
                "start": Object {
                  "column": 3,
                  "line": 4,
                },
              },
              "range": Array [
                40,
                46,
              ],
              "raw": "'test'",
              "type": "Literal",
              "value": "test",
            },
            "loc": Object {
              "end": Object {
                "column": 19,
                "line": 4,
              },
              "start": Object {
                "column": 2,
                "line": 4,
              },
            },
            "range": Array [
              39,
              56,
            ],
            "static": false,
            "type": "ClassProperty",
            "typeAnnotation": Object {
              "loc": Object {
                "end": Object {
                  "column": 18,
                  "line": 4,
                },
                "start": Object {
                  "column": 10,
                  "line": 4,
                },
              },
              "range": Array [
                47,
                55,
              ],
              "type": "TSTypeAnnotation",
              "typeAnnotation": Object {
                "loc": Object {
                  "end": Object {
                    "column": 18,
                    "line": 4,
                  },
                  "start": Object {
                    "column": 12,
                    "line": 4,
                  },
                },
                "range": Array [
                  49,
                  55,
                ],
                "type": "TSStringKeyword",
              },
            },
            "value": null,
          },
        ],
        "loc": Object {
          "end": Object {
            "column": 1,
            "line": 5,
          },
          "start": Object {
            "column": 10,
            "line": 3,
          },
        },
        "range": Array [
          35,
          58,
        ],
        "type": "ClassBody",
      },
      "id": Object {
        "loc": Object {
          "end": Object {
            "column": 9,
            "line": 3,
          },
          "start": Object {
            "column": 6,
            "line": 3,
          },
        },
        "name": "Bar",
        "range": Array [
          31,
          34,
        ],
        "type": "Identifier",
      },
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 5,
        },
        "start": Object {
          "column": 0,
          "line": 3,
        },
      },
      "range": Array [
        25,
        58,
      ],
      "superClass": null,
      "type": "ClassDeclaration",
    },
  ],
  "comments": Array [],
  "loc": Object {
    "end": Object {
      "column": 0,
      "line": 6,
    },
    "start": Object {
      "column": 0,
      "line": 1,
    },
  },
  "range": Array [
    0,
    59,
  ],
  "sourceType": "script",
  "tokens": Array [
    Object {
      "loc": Object {
        "end": Object {
          "column": 5,
          "line": 1,
        },
        "start": Object {
          "column": 0,
          "line": 1,
        },
      },
      "range": Array [
        0,
        5,
      ],
      "type": "Keyword",
      "value": "const",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 12,
          "line": 1,
        },
        "start": Object {
          "column": 6,
          "line": 1,
        },
      },
      "range": Array [
        6,
        12,
      ],
      "type": "Identifier",
      "value": "binExp",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 14,
          "line": 1,
        },
        "start": Object {
          "column": 13,
          "line": 1,
        },
      },
      "range": Array [
        13,
        14,
      ],
      "type": "Punctuator",
      "value": "=",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 16,
          "line": 1,
        },
        "start": Object {
          "column": 15,
          "line": 1,
        },
      },
      "range": Array [
        15,
        16,
      ],
      "type": "Punctuator",
      "value": "(",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 17,
          "line": 1,
        },
        "start": Object {
          "column": 16,
          "line": 1,
        },
      },
      "range": Array [
        16,
        17,
      ],
      "type": "Numeric",
      "value": "3",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 19,
          "line": 1,
        },
        "start": Object {
          "column": 18,
          "line": 1,
        },
      },
      "range": Array [
        18,
        19,
      ],
      "type": "Punctuator",
      "value": "+",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 21,
          "line": 1,
        },
        "start": Object {
          "column": 20,
          "line": 1,
        },
      },
      "range": Array [
        20,
        21,
      ],
      "type": "Numeric",
      "value": "5",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 22,
          "line": 1,
        },
        "start": Object {
          "column": 21,
          "line": 1,
        },
      },
      "range": Array [
        21,
        22,
      ],
      "type": "Punctuator",
      "value": ")",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 23,
          "line": 1,
        },
        "start": Object {
          "column": 22,
          "line": 1,
        },
      },
      "range": Array [
        22,
        23,
      ],
      "type": "Punctuator",
      "value": ";",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 5,
          "line": 3,
        },
        "start": Object {
          "column": 0,
          "line": 3,
        },
      },
      "range": Array [
        25,
        30,
      ],
      "type": "Keyword",
      "value": "class",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 9,
          "line": 3,
        },
        "start": Object {
          "column": 6,
          "line": 3,
        },
      },
      "range": Array [
        31,
        34,
      ],
      "type": "Identifier",
      "value": "Bar",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 11,
          "line": 3,
        },
        "start": Object {
          "column": 10,
          "line": 3,
        },
      },
      "range": Array [
        35,
        36,
      ],
      "type": "Punctuator",
      "value": "{",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 4,
        },
        "start": Object {
          "column": 2,
          "line": 4,
        },
      },
      "range": Array [
        39,
        40,
      ],
      "type": "Punctuator",
      "value": "[",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 9,
          "line": 4,
        },
        "start": Object {
          "column": 3,
          "line": 4,
        },
      },
      "range": Array [
        40,
        46,
      ],
      "type": "String",
      "value": "'test'",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 10,
          "line": 4,
        },
        "start": Object {
          "column": 9,
          "line": 4,
        },
      },
      "range": Array [
        46,
        47,
      ],
      "type": "Punctuator",
      "value": "]",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 11,
          "line": 4,
        },
        "start": Object {
          "column": 10,
          "line": 4,
        },
      },
      "range": Array [
        47,
        48,
      ],
      "type": "Punctuator",
      "value": ":",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 18,
          "line": 4,
        },
        "start": Object {
          "column": 12,
          "line": 4,
        },
      },
      "range": Array [
        49,
        55,
      ],
      "type": "Identifier",
      "value": "string",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 19,
          "line": 4,
        },
        "start": Object {
          "column": 18,
          "line": 4,
        },
      },
      "range": Array [
        55,
        56,
      ],
      "type": "Punctuator",
      "value": ";",
    },
    Object {
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 5,
        },
        "start": Object {
          "column": 0,
          "line": 5,
        },
      },
      "range": Array [
        57,
        58,
      ],
      "type": "Punctuator",
      "value": "}",
    },
  ],
  "type": "Program",
}
`;

exports[`semanticInfo malformed project file 1`] = `"Compiler option 'compileOnSave' requires a value of type boolean."`;
